--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,9 @@
 apply plugin: 'com.android.application'
 
+apply plugin: 'kotlin-android'
+
+apply plugin: 'kotlin-android-extensions'
+
 android {
     compileSdkVersion 29
     defaultConfig {
@@ -26,6 +30,10 @@ android {
             'at-cuongle' {
                 dimension "at-name"
                 applicationIdSuffix ".cuongle"
+            }
+            'at-daiho' {
+                dimension "at-name"
+                applicationIdSuffix ".daiho"
             }
             'at-hauha' {
                 dimension "at-name"
@@ -55,6 +63,9 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //Kotlin
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
