--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,11 +62,13 @@ android {
 }
 
 dependencies {
+    //noinspection GradleCompatible
+    implementation 'com.android.support:design:27.1.1'
     implementation 'de.hdodenhof:circleimageview:3.0.1'
 
-    implementation 'androidx.activity:activity-ktx:1.1.0-rc03' // or remove -ktx if not using kotlin
-    implementation 'androidx.fragment:fragment-ktx:1.2.0-rc05' // or remove -ktx if not using kotlin
-    implementation 'androidx.appcompat:appcompat:1.2.0-alpha01'
+    implementation 'androidx.activity:activity-ktx:1.1.0'
+    implementation 'androidx.fragment:fragment-ktx:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0-alpha02'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     //Kotlin
