--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,8 +68,15 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     apply from: "../ci-java.gradle"
+
+    implementation 'de.hdodenhof:circleimageview:3.0.1'
+
+    implementation 'androidx.activity:activity-ktx:1.1.0-rc03' // or remove -ktx if not using kotlin
+    implementation 'androidx.fragment:fragment-ktx:1.2.0-rc05' // or remove -ktx if not using kotlin
+    implementation 'androidx.appcompat:appcompat:1.2.0-alpha01'
 }
