--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,6 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     apply from: "../ci-java.gradle"
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'com.github.moove-it:fakeit:v0.7'
 }
