--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,21 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     apply from: "../ci-java.gradle"
+    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha01'
+    implementation 'de.hdodenhof:circleimageview:1.2.1'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.+'
+//    implementation "com.karumi:dexter:5.0.0"
+//    implementation 'com.jakewharton:butterknife:8.8.1'
+//    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+//    implementation 'com.github.bumptech.glide:glide:4.7.1'
+//    implementation 'com.github.bumptech.glide:annotations:4.7.1'
+//    implementation('com.github.bumptech.glide:okhttp3-integration:4.0.0') {
+//        exclude group: 'glide-parent'
+//    }
+//    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
+
+    implementation ('com.yalantis:ucrop:2.1.1@aar') {
+        transitive = true
+    }
 }
