--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,8 @@ android {
 }
 
 dependencies {
+    api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+
     //noinspection GradleCompatible
     implementation 'com.android.support:design:27.1.1'
     implementation 'de.hdodenhof:circleimageview:3.0.1'
