--- a/app/src/at-cuongle/AndroidManifest.xml
+++ b/app/src/at-cuongle/AndroidManifest.xml
@@ -10,11 +10,11 @@
         android:icon="@mipmap/ic_launcher"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        tools:ignore="GoogleAppIndexingWarning"
         android:theme="@style/AppTheme">
+
         <activity android:name=".MainActivity" />
         <activity android:name=".layout.LayoutMainActivity"/>
-        android:theme="@style/AppTheme"
-        tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".drawerLayout.DrawerLayoutActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
