--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,8 @@ android {
 }
 
 dependencies {
+    //noinspection GradleCompatible
+    implementation 'com.android.support:design:27.1.1'
     implementation 'me.relex:circleindicator:2.1.4'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
