--- a/app/src/at-nguyenha/AndroidManifest.xml
+++ b/app/src/at-nguyenha/AndroidManifest.xml
@@ -21,14 +21,14 @@
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
-        <activity android:name=".drawerlayout.DrawerLayoutMainActivity" />
-        <activity android:name=".layout.MyMainActivity">
+        <activity android:name=".drawerlayout.DrawerLayoutMainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".layout.MyMainActivity"/>
     </application>
 
 </manifest>
