--- a/app/src/at-nguyenha/AndroidManifest.xml
+++ b/app/src/at-nguyenha/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".service_broadcastreceiver.MainPlayerMusicActivity"></activity>
         <activity android:name=".service_broadcastreceiver.ListMusicActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,9 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".layout.MyMainActivity"/>
+        <activity android:name=".layout.MyMainActivity" />
+        <activity android:name=".MainActivity" />
 
-        <activity android:name=".MainActivity"/>
+        <service android:name=".service_broadcastreceiver.PlayMusicService" />
     </application>
 
 </manifest>
