--- a/app/src/at-uyennguyen/AndroidManifest.xml
+++ b/app/src/at-uyennguyen/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".appmusic.ListMusicActivity">
+        <activity android:name=".appmusic.MusicActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,6 +20,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity"/>
+        <service android:name=".appmusic.PlayMusicService"/>
     </application>
-
 </manifest>
