--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,7 +67,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.0.1'
 
     implementation 'androidx.activity:activity-ktx:1.1.0'
-    implementation 'androidx.fragment:fragment-ktx:1.2.0'
+    implementation 'androidx.fragment:fragment-ktx:1.2.2'
     implementation 'androidx.appcompat:appcompat:1.2.0-alpha02'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -84,4 +84,5 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.0.1'
 
     implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.media:media:1.1.0'
 }
