FDo sÃeekbar and fix bug

--- a/app/src/at-uyennguyen/AndroidManifest.xml
+++ b/app/src/at-uyennguyen/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="asiantech.internship.summer">
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -21,5 +22,6 @@
         </activity>
         <activity android:name=".MainActivity"/>
         <service android:name=".appmusic.PlayMusicService"/>
+
     </application>
 </manifest>
