--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,27 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     apply from: "../ci-java.gradle"
     implementation 'de.hdodenhof:circleimageview:3.0.1'
+
+    //noinspection GradleCompatible
+    implementation 'com.android.support:support-compat:28.0.0'
+    implementation "com.daimajia.swipelayout:library:1.2.0@aar"
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
+    def room_version = "2.2.4"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version" // For Kotlin use kapt instead of annotationProcessor
+
+    // optional - Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:$room_version"
+
+    // optional - RxJava support for Room
+    implementation "androidx.room:room-rxjava2:$room_version"
+
+    // optional - Guava support for Room, including Optional and ListenableFuture
+    implementation "androidx.room:room-guava:$room_version"
+
+    // Test helpers
+    testImplementation "androidx.room:room-testing:$room_version"
+
 }
