--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,13 +62,31 @@ android {
 }
 
 dependencies {
+    def room_version = "2.2.4"
+    apply plugin: 'kotlin-kapt'
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    // For Kotlin use kapt instead of annotationProcessor
+
+    // optional - Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:$room_version"
+
+    // optional - RxJava support for Room
+    implementation "androidx.room:room-rxjava2:$room_version"
+
+    // optional - Guava support for Room, including Optional and ListenableFuture
+    implementation "androidx.room:room-guava:$room_version"
+
+    // Test helpers
+    testImplementation "androidx.room:room-testing:$room_version"
     implementation "com.daimajia.swipelayout:library:1.2.0@aar"
     //noinspection GradleCompatible
     implementation 'com.android.support:design:27.1.1'
     implementation 'de.hdodenhof:circleimageview:3.0.1'
 
     implementation 'androidx.activity:activity-ktx:1.1.0'
-    implementation 'androidx.fragment:fragment-ktx:1.2.0'
+    implementation 'androidx.fragment:fragment-ktx:1.2.2'
     implementation 'androidx.appcompat:appcompat:1.2.0-alpha02'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -83,4 +101,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     apply from: "../ci-java.gradle"
     implementation 'de.hdodenhof:circleimageview:3.0.1'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
