--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,7 +77,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.0.1'
 
     implementation 'androidx.activity:activity-ktx:1.1.0'
-    implementation 'androidx.fragment:fragment-ktx:1.2.0'
+    implementation 'androidx.fragment:fragment-ktx:1.2.2'
     implementation 'androidx.appcompat:appcompat:1.2.0-alpha02'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -93,7 +93,8 @@ dependencies {
     apply from: "../ci-java.gradle"
     implementation 'de.hdodenhof:circleimageview:3.0.1'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0'
     implementation "com.daimajia.swipelayout:library:1.2.0@aar"
-
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
