--- a/app/src/at-nguyenha/AndroidManifest.xml
+++ b/app/src/at-nguyenha/AndroidManifest.xml
@@ -13,16 +13,19 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".savedata.activity.AddEditToDoActivity" />
-        <activity android:name=".savedata.activity.EditProfileActivity" />
-        <activity android:name=".savedata.activity.ToDoActivity" />
-        <activity android:name=".savedata.activity.LoginActivity">
+        <activity android:name=".savedata.activity.LaucherActivity"
+            android:theme="@style/LauncherTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+
             </intent-filter>
         </activity>
+        <activity android:name=".savedata.activity.AddEditToDoActivity" />
+        <activity android:name=".savedata.activity.EditProfileActivity" />
+        <activity android:name=".savedata.activity.ToDoActivity" />
+        <activity android:name=".savedata.activity.LoginActivity" />
         <activity android:name=".layout.MyMainActivity" />
         <activity android:name=".MainActivity" />
     </application>
