--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,13 +62,16 @@ android {
 }
 
 dependencies {
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
     //noinspection GradleCompatible
     implementation 'com.android.support:design:27.1.1'
     implementation 'de.hdodenhof:circleimageview:3.0.1'
 
     implementation 'androidx.activity:activity-ktx:1.1.0'
-    implementation 'androidx.fragment:fragment-ktx:1.2.1'
-    implementation 'androidx.appcompat:appcompat:1.2.0-alpha02'
+    implementation 'androidx.fragment:fragment-ktx:1.2.2'
+    implementation 'androidx.appcompat:appcompat:1.2.0-alpha03'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     //Kotlin
