handle upload image to server

--- a/app/src/at-cuongle/AndroidManifest.xml
+++ b/app/src/at-cuongle/AndroidManifest.xml
@@ -4,14 +4,17 @@
     package="asiantech.internship.summer">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
+        android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:ignore="GoogleAppIndexingWarning">
+        tools:ignore="AllowBackup,GoogleAppIndexingWarning,UnusedAttribute">
         <activity android:name=".MainActivity" />
         <activity android:name=".recyclerView.TimelineActivity">
             <intent-filter>
